--- a/web/package.json
+++ b/web/package.json
@@ -13,7 +13,8 @@
     "next": "14.1.0",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-resizable-panels": "^1.0.10"
   },
   "devDependencies": {
     "@types/node": "^20",
