--- a/api/package.json
+++ b/api/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "ts-node src/index.ts",
+    "dev": "nodemon src/index.ts",
     "env": "gen-env-types .env -o src/types/env.d.ts -e .",
     "mig": "drizzle-kit generate:pg && ts-node src/migrate.ts"
   },
@@ -15,17 +15,23 @@
     "@clickhouse/client": "^0.2.9",
     "@trpc/client": "^11.0.0-next-beta.242",
     "@trpc/server": "^11.0.0-next-beta.242",
+    "argon2": "^0.31.2",
+    "cookie-parser": "^1.4.6",
     "dotenv-safe": "^8.2.0",
     "drizzle-orm": "^0.29.3",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "pg": "^8.11.3",
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.6",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/pg": "^8.11.0",
     "drizzle-kit": "^0.20.13",
     "gen-env-types": "^1.3.4",
+    "nodemon": "^3.0.3",
     "ts-node": "^10.9.2"
   }
 }
