--- a/web/package.json
+++ b/web/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "web",
-  "version": "0.1.0",
+  "name": "@voidpulse/web",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -9,6 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.17.19",
+    "@trpc/client": "11.0.0-next-beta.242",
+    "@trpc/next": "11.0.0-next-beta.242",
+    "@trpc/react-query": "11.0.0-next-beta.242",
+    "@trpc/server": "11.0.0-next-beta.242",
+    "@voidpulse/api": "workspace:^",
     "chart.js": "^4.4.1",
     "next": "14.1.0",
     "react": "^18",
