--- a/api/package.json
+++ b/api/package.json
@@ -20,6 +20,7 @@
     "argon2": "^0.31.2",
     "axios": "^1.6.7",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv-safe": "^8.2.0",
     "drizzle-orm": "^0.29.3",
     "express": "^4.18.2",
@@ -30,6 +31,7 @@
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.6",
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/pg": "^8.11.0",
