--- a/web/package.json
+++ b/web/package.json
@@ -20,6 +20,7 @@
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
+    "react-hook-form": "^7.49.3",
     "react-resizable-panels": "^1.0.10"
   },
   "devDependencies": {
