--- a/web/package.json
+++ b/web/package.json
@@ -22,6 +22,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "react-hook-form": "^7.49.3",
+    "react-icons": "^5.0.1",
     "react-resizable-panels": "^1.0.10"
   },
   "devDependencies": {
