--- a/api/package.json
+++ b/api/package.json
@@ -32,6 +32,7 @@
   "devDependencies": {
     "@types/cookie-parser": "^1.4.6",
     "@types/cors": "^2.8.17",
+    "@types/dotenv-safe": "^8.1.5",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/pg": "^8.11.0",
