--- a/api/package.json
+++ b/api/package.json
@@ -25,6 +25,7 @@
     "drizzle-orm": "^0.29.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
+    "node-emoji": "^2.1.3",
     "pg": "^8.11.3",
     "uuid": "^9.0.1",
     "zod": "^3.22.4"
