--- a/web/package.json
+++ b/web/package.json
@@ -23,7 +23,8 @@
     "react-dom": "^18",
     "react-hook-form": "^7.49.3",
     "react-icons": "^5.0.1",
-    "react-resizable-panels": "^1.0.10"
+    "react-resizable-panels": "^1.0.10",
+    "zustand": "^4.5.0"
   },
   "devDependencies": {
     "@types/node": "^20",
