--- a/web/package.json
+++ b/web/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@floating-ui/react": "^0.26.8",
     "@tanstack/react-query": "^5.17.19",
     "@trpc/client": "11.0.0-next-beta.242",
     "@trpc/next": "11.0.0-next-beta.242",
