--- a/web/package.json
+++ b/web/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@floating-ui/react": "^0.26.8",
+    "@hookform/error-message": "^2.0.1",
     "@tanstack/react-query": "^5.17.19",
     "@trpc/client": "11.0.0-next-beta.242",
     "@trpc/next": "11.0.0-next-beta.242",
