--- a/web/package.json
+++ b/web/package.json
@@ -15,6 +15,7 @@
     "@trpc/next": "11.0.0-next-beta.242",
     "@trpc/react-query": "11.0.0-next-beta.242",
     "@trpc/server": "11.0.0-next-beta.242",
+    "@types/react-modal": "^3.16.3",
     "@voidpulse/api": "workspace:^",
     "chart.js": "^4.4.1",
     "downshift": "^8.3.1",
@@ -24,6 +25,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.49.3",
     "react-icons": "^5.0.1",
+    "react-modal": "^3.16.1",
     "react-resizable-panels": "^1.0.10",
     "zustand": "^4.5.0"
   },
