--- a/web/package.json
+++ b/web/package.json
@@ -15,6 +15,7 @@
     "@trpc/next": "11.0.0-next-beta.242",
     "@trpc/react-query": "11.0.0-next-beta.242",
     "@trpc/server": "11.0.0-next-beta.242",
+    "@types/react-dates": "^21.8.6",
     "@types/react-modal": "^3.16.3",
     "@voidpulse/api": "workspace:^",
     "chart.js": "^4.4.1",
@@ -23,6 +24,7 @@
     "next": "14.1.0",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
+    "react-dates": "^21.8.0",
     "react-dom": "^18",
     "react-hook-form": "^7.49.3",
     "react-icons": "^5.0.1",
