--- a/web/package.json
+++ b/web/package.json
@@ -21,6 +21,7 @@
     "chart.js": "^4.4.1",
     "downshift": "^8.3.1",
     "emoji-picker-react": "^4.7.11",
+    "moment": "^2.30.1",
     "next": "14.1.0",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
