--- a/web/package.json
+++ b/web/package.json
@@ -31,12 +31,14 @@
     "react-icons": "^5.0.1",
     "react-modal": "^3.16.1",
     "react-resizable-panels": "^1.0.10",
+    "react-window": "^1.8.10",
     "zustand": "^4.5.0"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-window": "^1.8.8",
     "autoprefixer": "^10.0.1",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
