--- a/web/package.json
+++ b/web/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@floating-ui/react": "^0.26.8",
+    "@formatjs/intl-numberformat": "^8.10.0",
     "@tanstack/react-query": "^5.17.19",
     "@tanstack/react-table": "^8.11.8",
     "@tanstack/react-virtual": "^3.0.4",
@@ -21,6 +22,7 @@
     "@types/react-modal": "^3.16.3",
     "@voidpulse/api": "workspace:^",
     "chart.js": "^4.4.1",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "downshift": "^8.3.1",
     "emoji-picker-react": "^4.7.11",
     "moment": "^2.30.1",
