--- a/web/package.json
+++ b/web/package.json
@@ -39,11 +39,14 @@
     "zustand": "^4.5.0"
   },
   "devDependencies": {
+    "@types/css": "^0.0.37",
     "@types/node": "^20.11.10",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-window": "^1.8.8",
     "autoprefixer": "^10.0.1",
+    "css": "^3.0.0",
+    "prettier": "^3.2.5",
     "tailwindcss": "^3.3.0",
     "ts-node": "^10.9.2",
     "typescript": "^5"
