--- a/api/package.json
+++ b/api/package.json
@@ -29,6 +29,7 @@
     "kafkajs": "^2.2.4",
     "node-emoji": "^2.1.3",
     "node-fetch": "^3.3.2",
+    "openai": "^4.27.0",
     "pg": "^8.11.3",
     "uuid": "^9.0.1",
     "zod": "^3.22.4"
