--- a/api/package.json
+++ b/api/package.json
@@ -25,6 +25,7 @@
     "dotenv-safe": "^8.2.0",
     "drizzle-orm": "^0.29.3",
     "express": "^4.18.2",
+    "geoip-lite": "^1.4.9",
     "jsonwebtoken": "^9.0.2",
     "kafkajs": "^2.2.4",
     "node-emoji": "^2.1.3",
@@ -39,6 +40,7 @@
     "@types/cors": "^2.8.17",
     "@types/dotenv-safe": "^8.1.5",
     "@types/express": "^4.17.21",
+    "@types/geoip-lite": "^1.4.4",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/pg": "^8.11.0",
     "@types/uuid": "^9.0.8",
