--- a/api/.env.example
+++ b/api/.env.example
@@ -3,4 +3,6 @@ DOMAIN=
 FRONTEND_URL=
 REFRESH_TOKEN_SECRET=
 ACCESS_TOKEN_SECRET=
-CHATGPT_API_SECRET=
+CHATGPT_API_SECRET=optional
+MIXPANEL_API_SECRET=optional
+MASTERMIND_LICENSE_KEY=optional
