--- a/web/package.json
+++ b/web/package.json
@@ -13,6 +13,7 @@
     "@floating-ui/react": "^0.26.8",
     "@formatjs/intl-numberformat": "^8.10.0",
     "@hello-pangea/dnd": "^16.5.0",
+    "@juggle/resize-observer": "^3.4.0",
     "@tanstack/react-query": "^5.17.19",
     "@tanstack/react-table": "^8.11.8",
     "@tanstack/react-virtual": "^3.0.4",
@@ -32,11 +33,13 @@
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
     "react-dates": "^21.8.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18",
     "react-hook-form": "^7.49.3",
     "react-icons": "^5.0.1",
     "react-modal": "^3.16.1",
-    "react-resizable-panels": "^1.0.10",
+    "use-resize-observer": "^9.1.0",
     "zustand": "^4.5.0"
   },
   "devDependencies": {
