--- a/clients/voidpulse-react-native/package.json
+++ b/clients/voidpulse-react-native/package.json
@@ -2,10 +2,15 @@
   "name": "@voidpulse/react-native",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc",
+    "watch": "tsc -w"
   },
+  "files": [
+    "dist"
+  ],
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -15,6 +20,7 @@
     "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "react-native": "^0.73.4"
+    "react-native": "^0.73.4",
+    "typescript": "^5.3.3"
   }
 }
