--- a/clients/voidpulse-react-native/package.json
+++ b/clients/voidpulse-react-native/package.json
@@ -6,7 +6,8 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "build": "tsc",
-    "watch": "tsc -w"
+    "watch": "tsc -w",
+    "test": "jest"
   },
   "files": [
     "dist"
@@ -20,7 +21,11 @@
     "uuid": "^9.0.1"
   },
   "devDependencies": {
+    "@jest/globals": "^29.7.0",
+    "@types/jest": "^29.5.12",
+    "jest": "^29.7.0",
     "react-native": "^0.73.4",
+    "ts-jest": "^29.1.2",
     "typescript": "^5.3.3"
   }
 }
