--- a/web/package.json
+++ b/web/package.json
@@ -39,6 +39,7 @@
     "react-hook-form": "^7.49.3",
     "react-icons": "^5.0.1",
     "react-modal": "^3.16.1",
+    "tailwindcss-animate": "^1.0.7",
     "use-resize-observer": "^9.1.0",
     "zustand": "^4.5.0"
   },
