Update Dockerfile to copy Next.js app files to the correct directory

--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -36,9 +36,14 @@ WORKDIR /usr/src/app
 
 # Copy over the built artifacts from the builder stage
 COPY --from=builder /usr/src/app/api/dist ./api
-COPY --from=builder /usr/src/app/web/.next ./.next
-COPY --from=builder /usr/src/app/web/public ./public
-COPY --from=builder /usr/src/app/web/package.json ./package.json
+COPY --from=builder /usr/src/app/web/.next ./web/.next
+COPY --from=builder /usr/src/app/web/public ./web/public
+COPY --from=builder /usr/src/app/web/package.json ./web/package.json
+COPY --from=builder /usr/src/app/pnpm-lock.yaml ./pnpm-lock.yaml
+COPY --from=builder /usr/src/app/pnpm-workspace.yaml ./pnpm-workspace.yaml
+
+# Navigate to the Next.js app directory within the monorepo
+WORKDIR /usr/src/app/web
 
 # Install pnpm
 RUN npm install -g pnpm
