Update .env.example and login/register error handling

--- a/api/.env.example
+++ b/api/.env.example
@@ -6,3 +6,4 @@ ACCESS_TOKEN_SECRET=
 CHATGPT_API_SECRET=optional
 MIXPANEL_API_SECRET=optional
 MASTERMIND_LICENSE_KEY=optional
+MISTRAL_API_SECRET=optional
