--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -26,9 +26,12 @@ FROM node:21-alpine
 WORKDIR /usr/src/app
 
 # Copy over the built artifacts from the builder stage
+COPY --from=builder /usr/src/app/api/package.json ./api/package.json
 COPY --from=builder /usr/src/app/web/.next ./web/.next
 COPY --from=builder /usr/src/app/web/public ./web/public
 COPY --from=builder /usr/src/app/web/package.json ./web/package.json
+COPY --from=builder /usr/src/app/pnpm-lock.yaml ./pnpm-lock.yaml
+COPY --from=builder /usr/src/app/pnpm-workspace.yaml ./pnpm-workspace.yaml
 
 # Navigate to the Next.js app directory within the monorepo
 WORKDIR /usr/src/app/web
