Update next-app image tag in docker-compose.yaml

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -45,10 +45,7 @@ services:
       start_period: 10s
 
   next-app:
-    image: next-app-image
-    build:
-      context: ./
-      dockerfile: ./web/Dockerfile
+    image: next-app-image:latest
     networks:
       - overlay-net
     deploy:
