--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,8 +11,8 @@ services:
     networks:
       - overlay-net
 
-  node-app:
-    image: node-app:latest
+  api:
+    image: api:latest
     networks:
       - overlay-net
     depends_on:
@@ -21,7 +21,7 @@ services:
       - postgres
     deploy:
       labels:
-        - "caddy.reverse_proxy=to http://node-app:3000"
+        - "caddy.reverse_proxy=to http://api:3000"
         - "caddy.reverse_proxy.header_up=Host event2.voidpet.com"
         - "caddy.reverse_proxy.path=/trpc/*"
       replicas: 1
@@ -41,13 +41,13 @@ services:
       retries: 3
       start_period: 10s
 
-  next-app:
-    image: next-app:latest
+  web:
+    image: web:latest
     networks:
       - overlay-net
     deploy:
       labels:
-        - "caddy.reverse_proxy=to http://next-app:3000"
+        - "caddy.reverse_proxy=to http://web:3000"
         - "caddy.reverse_proxy.header_up=Host event2.voidpet.com"
 
   clickhouse:
