--- a/Caddyfile
+++ b/Caddyfile
@@ -1,6 +1,9 @@
 event2.voidpet.com {
+	# Named matcher for multiple paths
+  @apiPaths path /trpc /ingest /health /update-people
+
   # Reverse proxy for API service
-  reverse_proxy /trpc/* api:3000 {
+  reverse_proxy @apiPaths api:3000 {
     header_up Host event2.voidpet.com
   }
 
