--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -38,6 +38,10 @@ COPY package*.json ./
 # Install only production dependencies
 RUN npm install --only=production
 
+ENV NODE_ENV production
+ENV DOMAIN https://event2.voidpet.com
+ENV FRONTEND_URL https://event2.voidpet.com
+
 # Expose the port your app runs on
 EXPOSE 3000
 
