Update clickhouse-data volume path in docker-compose.yaml

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -60,7 +60,7 @@ services:
   clickhouse:
     image: clickhouse/clickhouse-server
     volumes:
-      - clickhouse-data:/var/lib/clickhouse
+      - ../clickhouse-data:/var/lib/clickhouse
     environment:
       CLICKHOUSE_DB: voidpulse
     networks:
