Update docker-compose.yaml to use env_file instead of environment variables

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -15,13 +15,15 @@ services:
     image: api:latest
     networks:
       - overlay-net
-    environment:
-      REFRESH_TOKEN_SECRET: ${REFRESH_TOKEN_SECRET}
-      ACCESS_TOKEN_SECRET: ${ACCESS_TOKEN_SECRET}
-      CHATGPT_API_SECRET: ${CHATGPT_API_SECRET}
-      MIXPANEL_API_SECRET: ${MIXPANEL_API_SECRET}
-      MASTERMIND_LICENSE_KEY: ${MASTERMIND_LICENSE_KEY}
-      MISTRAL_API_SECRET: ${MISTRAL_API_SECRET}
+    env_file:
+      - .env
+    # environment:
+    #   REFRESH_TOKEN_SECRET: ${REFRESH_TOKEN_SECRET}
+    #   ACCESS_TOKEN_SECRET: ${ACCESS_TOKEN_SECRET}
+    #   CHATGPT_API_SECRET: ${CHATGPT_API_SECRET}
+    #   MIXPANEL_API_SECRET: ${MIXPANEL_API_SECRET}
+    #   MASTERMIND_LICENSE_KEY: ${MASTERMIND_LICENSE_KEY}
+    #   MISTRAL_API_SECRET: ${MISTRAL_API_SECRET}
     depends_on:
       - clickhouse
       - kafka
