Update environment variables in docker-compose.yaml

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -17,13 +17,13 @@ services:
       - overlay-net
     env_file:
       - .env
-    # environment:
-    #   REFRESH_TOKEN_SECRET: ${REFRESH_TOKEN_SECRET}
-    #   ACCESS_TOKEN_SECRET: ${ACCESS_TOKEN_SECRET}
-    #   CHATGPT_API_SECRET: ${CHATGPT_API_SECRET}
-    #   MIXPANEL_API_SECRET: ${MIXPANEL_API_SECRET}
-    #   MASTERMIND_LICENSE_KEY: ${MASTERMIND_LICENSE_KEY}
-    #   MISTRAL_API_SECRET: ${MISTRAL_API_SECRET}
+    environment:
+      REFRESH_TOKEN_SECRET: ${REFRESH_TOKEN_SECRET}
+      ACCESS_TOKEN_SECRET: ${ACCESS_TOKEN_SECRET}
+      CHATGPT_API_SECRET: ${CHATGPT_API_SECRET}
+      MIXPANEL_API_SECRET: ${MIXPANEL_API_SECRET}
+      MASTERMIND_LICENSE_KEY: ${MASTERMIND_LICENSE_KEY}
+      MISTRAL_API_SECRET: ${MISTRAL_API_SECRET}
     depends_on:
       - clickhouse
       - kafka
