Update REFRESH_TOKEN_SECRET in docker-compose.yaml

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -18,7 +18,7 @@ services:
     env_file:
       - .env
     environment:
-      REFRESH_TOKEN_SECRET: ${REFRESH_TOKEN_SECRET}
+      REFRESH_TOKEN_SECRET: test
       ACCESS_TOKEN_SECRET: ${ACCESS_TOKEN_SECRET}
       CHATGPT_API_SECRET: ${CHATGPT_API_SECRET}
       MIXPANEL_API_SECRET: ${MIXPANEL_API_SECRET}
