Update .gitignore and Dockerfile, fix clickhouse host

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -41,9 +41,9 @@ COPY package*.json ./
 # Install only production dependencies
 RUN npm install --only=production
 
-ENV NODE_ENV production
-ENV DOMAIN https://event2.voidpet.com
-ENV FRONTEND_URL https://event2.voidpet.com
+ENV NODE_ENV=production
+ENV DOMAIN=https://event2.voidpet.com
+ENV FRONTEND_URL=https://event2.voidpet.com
 
 # @inject-env-variables
 
