Update DOMAIN environment variable in Dockerfile

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -43,7 +43,7 @@ COPY package*.json ./
 RUN npm install --only=production
 
 ENV NODE_ENV=production
-ENV DOMAIN=https://event2.voidpet.com
+ENV DOMAIN=event2.voidpet.com
 ENV FRONTEND_URL=https://event2.voidpet.com
 
 # @inject-env-variables
