Update Dockerfile and update.sh script

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -15,8 +15,10 @@ COPY package*.json ./
 # Install npm dependencies, including 'geoip-lite'
 RUN npm install
 
+# @inject-env-variables
+
 # Install the GeoIP database
-# RUN npm run-script updatedb.geoip-lite
+RUN npm run-script updatedb.geoip-lite
 
 # Copy the rest of your application's source code
 COPY . .
