--- a/api/package.json
+++ b/api/package.json
@@ -24,7 +24,7 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "date-fns": "^3.3.1",
-    "dotenv-safe": "^8.2.0",
+    "dotenv": "^16.4.5",
     "drizzle-orm": "^0.29.3",
     "express": "^4.18.2",
     "geoip-lite": "^1.4.9",
