--- a/api/.env.example
+++ b/api/.env.example
@@ -6,3 +6,6 @@ CHATGPT_API_SECRET=optional
 MIXPANEL_API_SECRET=optional
 MASTERMIND_LICENSE_KEY=optional
 MISTRAL_API_SECRET=optional
+POSTMARK_API_KEY=optional
+FROM_EMAIL=optional
+CLOUD=optional
