--- a/api/package.json
+++ b/api/package.json
@@ -28,12 +28,14 @@
     "drizzle-orm": "^0.29.3",
     "express": "^4.18.2",
     "geoip-lite": "^1.4.9",
+    "ioredis": "^5.3.2",
     "jsonwebtoken": "^9.0.2",
     "kafkajs": "^2.2.4",
     "node-emoji": "^2.1.3",
     "node-fetch": "^3.3.2",
     "openai": "^4.27.0",
     "pg": "^8.11.3",
+    "postmark": "^4.0.2",
     "uuid": "^9.0.1",
     "zod": "^3.22.4"
   },
