--- a/web/package.json
+++ b/web/package.json
@@ -7,7 +7,9 @@
     "build": "NEXT_TELEMETRY_DISABLED=1 next build",
     "start": "NEXT_TELEMETRY_DISABLED=1 next start",
     "lint": "next lint",
-    "themes": "ts-node --project tsconfig.scripts.json scripts/convertHexThemes.ts"
+    "themes": "ts-node --project tsconfig.scripts.json scripts/convertHexThemes.ts",
+    "pages:build": "pnpm dlx @cloudflare/next-on-pages@1",
+    "deploy": "pnpm run pages:build && wrangler pages deploy --branch=prod .vercel/output/static"
   },
   "dependencies": {
     "@floating-ui/react": "^0.26.8",
@@ -44,6 +46,8 @@
     "zustand": "^4.5.0"
   },
   "devDependencies": {
+    "@cloudflare/next-on-pages": "^1.9.0",
+    "@cloudflare/workers-types": "^4.20240222.0",
     "@types/css": "^0.0.37",
     "@types/node": "^20.11.10",
     "@types/react": "^18",
@@ -55,6 +59,7 @@
     "prettier": "^3.2.5",
     "tailwindcss": "^3.3.0",
     "ts-node": "^10.9.2",
-    "typescript": "^5"
+    "typescript": "^5",
+    "wrangler": "^3.29.0"
   }
 }
