--- a/api/package.json
+++ b/api/package.json
@@ -29,8 +29,10 @@
     "express": "^4.18.2",
     "geoip-lite": "^1.4.9",
     "ioredis": "^5.3.2",
+    "json-stringify-deterministic": "^1.0.12",
     "jsonwebtoken": "^9.0.2",
     "kafkajs": "^2.2.4",
+    "lru-cache": "^10.2.0",
     "node-emoji": "^2.1.3",
     "node-fetch": "^3.3.2",
     "openai": "^4.27.0",
