Update package.json and getDateHeaders.ts***
***Add luxon dependency and update date handling in getDateHeaders.ts

--- a/api/package.json
+++ b/api/package.json
@@ -5,7 +5,7 @@
   "main": "src/app-router-type.ts",
   "types": "src/app-router-type.ts",
   "scripts": {
-    "dev": "nodemon --files src/index.ts",
+    "dev": "TZ=UTC nodemon --files src/index.ts",
     "env": "gen-env-types .env -o src/types/env.d.ts -e .",
     "build": "tsc",
     "mig": "drizzle-kit generate:pg && ts-node src/migrate.ts",
@@ -33,6 +33,7 @@
     "jsonwebtoken": "^9.0.2",
     "kafkajs": "^2.2.4",
     "lru-cache": "^10.2.0",
+    "luxon": "^3.4.4",
     "node-emoji": "^2.1.3",
     "node-fetch": "^3.3.2",
     "openai": "^4.27.0",
@@ -49,6 +50,7 @@
     "@types/express": "^4.17.21",
     "@types/geoip-lite": "^1.4.4",
     "@types/jsonwebtoken": "^9.0.5",
+    "@types/luxon": "^3.4.2",
     "@types/pg": "^8.11.0",
     "@types/uuid": "^9.0.8",
     "drizzle-kit": "^0.20.13",
