--- a/web/package.json
+++ b/web/package.json
@@ -42,6 +42,7 @@
     "react-hook-form": "^7.49.3",
     "react-icons": "^5.0.1",
     "react-modal": "^3.16.1",
+    "react-toastify": "^10.0.4",
     "tailwindcss-animate": "^1.0.7",
     "use-resize-observer": "^9.1.0",
     "zustand": "^4.5.0"
