--- a/clients/voidpulse-node/tsconfig.json
+++ b/clients/voidpulse-node/tsconfig.json
@@ -8,6 +8,7 @@
     "outDir": "./dist",
     "moduleResolution": "node",
     "removeComments": true,
+    "declaration": true,
     "noImplicitAny": true,
     "strictNullChecks": true,
     "strictFunctionTypes": true,
